gccida/g0/preprocess_constraints
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/preprocess_constraints/src/recog.c:2655:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( i = 0; i < recog_data_0.n_operands; ++i ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/preprocess_constraints/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/preprocess_constraints/src/recog.c:2657:5: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
p = recog_data_0.constraints[i]; 
    ^~~~~~~~~~~~
    recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/preprocess_constraints/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/preprocess_constraints/src/recog.c:2659:18: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
for ( j = 0; j < recog_data_0.n_alternatives; ++j ) 
                 ^~~~~~~~~~~~
                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/preprocess_constraints/src/recog.c:72:19: note: 'recog_data' declared here
struct recog_data recog_data;
                  ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/preprocess_constraints/src/obj/recog.o] Error 1
